--- a/less/v2/dark/forms.less
+++ b/less/v2/dark/forms.less
@@ -30,5 +30,10 @@
     }
   }
 
+  button {
+    border-color: var(--dnd5e-color-blue-gray-1);
+    &:hover { border-color: var(--dnd5e-color-blue-gray-1); }
+  }
+
   .control-button { color: var(--dnd5e-color-gold); }
 }
