--- a/less/v2/forms.less
+++ b/less/v2/forms.less
@@ -39,6 +39,11 @@
   }
 
   button {
+    --button-focus-outline-color: none;
+    --button-hover-background-color: var(--dnd5e-background-card);
+    --button-text-color: var(--color-text-dark-primary);
+    --button-hover-text-color: var(--color-text-dark-primary);
+    --button-hover-border-color: var(--dnd5e-color-gold);
     background: var(--dnd5e-background-card);
     font-size: var(--font-size-13);
     text-transform: uppercase;
@@ -420,11 +425,6 @@
   multi-select.hidden-tags .tags.input-element-tags { display: none; }
 
   :is(file-picker, document-tags) > button {
-    --button-focus-outline-color: none;
-    --button-hover-background-color: var(--dnd5e-background-card);
-    --button-text-color: var(--color-text-dark-primary);
-    --button-hover-text-color: var(--color-text-dark-primary);
-    --button-hover-border-color: transparent;
     height: var(--form-field-height);
     border: var(--dnd5e-border-gold);
   }
